source/stylesheets/base.css.scss
@import "compass/css3/box-sizing";

$dark-gray: #222;
$light-gray: #CED3D5;
$red: #FF574A;
$white: #f7f5f3;
$orange: #F7A541;

*, *:before, *:after {
  @include box-sizing(border-box);
}

body {
  background: $white;
  color: $dark-gray;
  font-family: "ff-tisa-web-pro",serif;
  font-size: 1.25em;
  font-style: normal;
  font-weight: 400;
}

a {
  color: $red;
  text-decoration: none;
  &:hover {
    text-decoration: underline;
  }
}

blockquote {
  color: #9CA7AC;
  font-style: italic;
  margin: 1.5em 0;
}

hr {
  border: 0;
  height: 0;
  border-top: 1px solid rgba(0, 0, 0, 0.1);
  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
  margin-bottom: 1.5em;
}

h2 {
  font-size: 1em;
}

h3 {
  border-bottom: 4px double #CECECE;
  border-top: 4px double #CECECE;
  color: #ff574a;
  font-weight: 300;
  margin: 2em 0;
  padding: 1em;
  text-align: center;
}

h5 {
  text-transform: uppercase;
  letter-spacing: 1px;
  font-size: 0.6em;
  font-weight: 600;
  margin: 2em 0;
  color: #75797A;
}

ul {
  list-style: none;
  margin: 0;
  padding: 0;
  li {
    margin-bottom: 0.5em;
  }
}

.container {
  margin: 0 auto;
  max-width: 1050px;
  width: 90%;
  article {
    clear: both;
  }
}

.row {
  margin: 0;
  padding: 0;
}

.column {
  margin: 2em 0;
}

header {
  background: $dark-gray;
  overflow: hidden;
  padding: 0 0.9em;
  h2 {
    border-bottom: none;
    display: inline-block;
    color: $white;
    margin: 0.5em 0;
    @media (min-width: 840px) {
      float: left;
    }
  }
}

.links {
  margin-top: 0.35em;
  margin-bottom: 1em;
  @media (min-width: 840px) {
    margin-bottom: 0;
    float: right;
  }
  a {
    border-bottom: 1px solid transparent;
    color: $white;
    font-size: 0.6em;
    letter-spacing: 1px;
    margin-right: 2em;
    text-decoration: none;
    text-transform: uppercase;
    &:hover {
      border-bottom: 1px solid $white;
    }
    &:last-child {
      margin-right: 0;
    }
  }
}

.sub-nav {
  background: $red;
  ul {
    li {
      text-align: center;
      margin: 0;
    }
  }
  a {
    color: $white;
    display: block;
    padding: 1em 0;
    text-decoration: none;
    width: 100%;
  }
}

.nav-item {
  border-top: 1px solid rgba(0,0,0,0.1);
  margin: 0;
}

.cards {
  width: 100%;
  li {
    color: #4D4D4D;
    display: block;
    font-size: 0.9em;
    padding: 1.5em;
    text-align: center;
    width: 100%;
    margin: 1em 0 0 0;
    background: #fff;
    border-radius: 3px;
    -webkit-box-shadow: 0 1px 3px rgba(64,56,41,0.1);
    -moz-box-shadow: 0 1px 3px rgba(64,56,41,0.2);
    box-shadow: 0 1px 3px rgba(64,56,41,0.1);
    &:first-child {
      margin-left: 0;
    }
    a:last-child {
      display: block;
      margin-top: 1em;
      text-align: center;
    }
  }
  .reverse {
    background: $red;
    color: $white;
  }
}

.cards-icon {
  border-bottom: 1px solid #D6D6D6;
  display: block;
  font-size: 1.5em;
  margin: -0.35em auto 0.65em auto;
  text-align: center;
  width: 2.1em;
  padding: 0 0 0.4em 0;
}

.about {
  margin-top: 2em;
  h1 {
    line-height: 1.35em;
    font-style: normal;
    font-size: 2em;
    margin: 0.5em 0 1em 0;
    max-width: 700px;
    a {
      text-decoration: none;
    }
  }
}

.left-col, .right-col {
  float: none;
  margin: 2em 0;
  width: 100%;
  h2 {
    font-size: 0.6em;
    font-weight: 600;
    letter-spacing: 1px;
    text-transform: uppercase;
  }
}

.left-col {
  margin-right: 2%;
}

.statement {
  color: #444;
  font-size: 0.9em;
  overflow: hidden;
  display: block;
  max-width: 600px;
  .column {
    float: left;
    margin-right: 6%;
    width: 47%;
    &:last-child {
      margin-right: 0;
    }
    p {
      margin: 0;
    }
  }
}

.statement-mobile {
  color: #444;
  display: none;
  font-size: 0.9em;
  overflow: hidden;
  margin: 1em 0 2.5em 0;
  p {
    margin: 0 0 0 1em 0;
  }
}

button {
  background: $red;
  color: $white;
  -moz-border-radius: 4px;
  -webkit-border-radius: 4px;
  border-radius: 4px;
  display: inline-block;
  padding: 10px 14px;
  &:hover {
    background: $orange;
  }
}

.tag {
  border: 1px solid #D3DBDD;
  color: #A8B1B4;
  font-size: 0.5em;
  text-transform: uppercase;
  letter-spacing: 1px;
  font-weight: 500;
  font-family: "Proxima-Nova", sans-serif;
  padding: 0.6em 0.7em 0.5em 0.7em;
  display: inline-block;
  line-height: 1em;
  vertical-align: top;
  margin: 0.7em 0 0 0.6em;
}

.blend {
  color: inherit;
  &:hover {
    text-decoration: none;
  }
}

.divide {
  border-top: 1px solid $light-gray;
  display: block;
  margin: 0 auto;
  margin-top: 1em;
  padding-bottom: 1.3em;
  width: 30px;
}

.remove-margin {
  margin: 0;
}

/*------  Apprenticeship  ------*/

.apprenticeship-header {
  h2 {
    font-size: 80%;
    font-weight: 400;
    line-height: 2.65em;
    margin: 0.4em 0;
  }
  .cursor {
    margin-left: -135px;
    width: 135px;
  }
}

.apprenticeship-image {
  background: url("/images/type.png") $white;
  background-size: cover;
  background-position: center 30%;
  background-repeat: no-repeat;
  min-height: 300px;
  margin-top: -0.4em;
}

.syllabus-nav {
  a {
    border: 2px solid $red;
    display: block;
    padding: 0.5em 1em;
    margin-bottom: 1em;
    li {
      display: inline-block;
    }
  }
}

.project-title {
  margin-top: 3em;
  text-align: center;
}

.project-tags {
  text-align: center;
  margin: 0 0 3em 0;
}

.project-description {
  max-width: 700px;
  margin: 0 auto;
}


footer {
  border-top: 1px solid $light-gray;
  color: #A8B1B4;
  font-size: 0.8em;
  margin-top: 2em;
  min-height: 60px;
  padding: 1em 0;
  text-align: center;
  .links {
    float: left;
    margin: 0;
    a {
      color: $red;
      display: inline-block;
      font-size: 0.7em;
      line-height: 3em;
      margin: 0 2em 0 0;
    }
  }
}

.row:before,
.row:after,
.container:before,
.container:after,
section:before,
section:after {
  content: " ";
  display: table;
}

.row:before,
.row:after,
.container:before,
.container:after,
section:before,
section:after {
  clear: both;
}

.row:before,
.row:after,
.container:before,
.container:after,
section:before,
section:after {
  *zoom: 1;
}

/*------  Instafeed  ------*/
#instafeed {
  .intro {
    padding: 1em;
    h4 {
      color: $red;
      margin: 0.5em 0 0.2em 0;
    }
    h5 {
      margin: 0;
    }
    .tag {
      margin: 3em 0 0 0;
    }
    .divide {
      margin: 1em 0 0 0;
    }
  }
  a {
    width: 100%;
    display: block;
  }
  img {
    display: block;
    float: left;
    width: 100%;
  }
}

/*------  Media Queries  ------*/

@media screen and (min-width: 420px) {
  #instafeed {
    img {
      width: 50%;
    }
  }
}

@media (min-width: 740px) {
  #instafeed {
    .intro {
      display: block;
      float: left;
      width: 100%;
    }
    a {
      width: 100%;
      display: block;
    }
    img {
      display: block;
      float: left;
      width: 25%;
    }
  }
}

@media (min-width: 840px) {
  .column {
    float: left;
    margin: 0 0 0 5%;
    &:first-child {
      margin-left: 0;
    }
    &.full {
      width: 100%;
      margin: 0;
    }
    &.two-thirds {
      width: 65%;
    }
    &.half {
      width: 47.5%;
    }
    &.one-third {
      width: 30%;
    }
    &.one-fourth {
      width: 21.2%;
    }
    &.three-fourths {
      width: 73.8%;
    }
    &.two-fifths {
      width: 40%;
    }
    &.three-fifths {
      width: 55%;
    }
    &.half-margin {
      margin-left: 3%;
      .container {
        width: 100%;
      }
    }
  }
  .sub-nav {
    ul {
      li {
        display: inline-block;
        margin-bottom: 0;
        padding: 2em 3em 2em 0;
        text-align: left;
      }
    }
    a {
      border-bottom: 2px solid $red;
      color: $white;
      display: inline-block;
      padding: 0;
      &:hover {
        border-bottom: 2px solid $white;
      }
    }
  }
  .cards {
    float: left;
    margin-bottom: 2em;
    li {
      display: block;
      float: left;
      font-size: 0.7em;
      padding: 1.8em;
      width: 23.5%;
      margin: 0 0 0 2%;
      &:first-child {
        margin-left: 0;
      }
    }
  }
  .apprenticeship-image {
    min-height: 620px;
    margin-top: 0;
  }
  .syllabus-nav {
    li {
      margin-bottom: 0;
    }
    border: 2px solid $red;
    a {
      border: none;
      display: inline-block;
      margin-bottom: 0;
    }
  }
}

@media (min-width: 1100px) {
  #instafeed {
    .intro {
      display: block;
      float: left;
      width: 20%;
    }
    a {
      width: 100%;
      display: block;
    }
    img {
      display: block;
      float: left;
      width: 20%;
    }
  }
}

/* Cursor Animation */

.cursor {
  background-color: transparent;
  border-right: 2px solid transparent;
  cursor: pointer;
  display: inline-block;
  width: 55px;
  height: 35px;
  margin-bottom: -9px;
  margin-left: -55px;
}

.cursor:hover {
  border-right: 2px solid $red;
  -webkit-animation: pulse 0.5s ease-in-out 0s infinite alternate;
}

@-webkit-keyframes fadeIn {
  0%   { opacity: 0; }
  100% { opacity: 0.5;}
}

@-webkit-keyframes pulse {
  0%   { background-color: transparent; border-right: 2px solid transparent; }
  100% { border-right: 2px solid $red; }
}

.cf:before,
.cf:after,
.container:before,
.container:after,
.section:before,
.section:after {
  content: " ";
  display: table;
}
.cf:after,
.container:after,
.section:after {
  clear: both;
}
.cf,
.container,
.section {
  *zoom: 1;
}

